# lol_dto

./: .gitignore  README.md  pyproject.toml  riot.txt  script_test.py  setup.py
dto/: lol_game.py  lol_game_team.py
lol/dto/: __init__.py  lol_game.py  lol_game_team_player.py
lol/game/: __init__.py  lol_game.py  lol_game_event.py  lol_game_team.py  lol_game_team_player.py
lol_dto/: __init__.py
lol_dto/classes/: __init__.py
lol_dto/classes/game/: __init__.py  extra_classes.py  lol_game.py  lol_game_event.py  lol_game_player.py  lol_game_team.py  position.py
lol_dto/classes/sources/: __init__.py  empty_dataclass.py  riot_lol_api.py
lol_dto/game/: extra_classes.py  lol_game.py  lol_game_event.py  lol_game_player.py  lol_game_team.py  lol_game_team_player.py
lol_dto/names_helper/: champion_name.py  name_classes.py
lol_dto/utilities/: __init__.py  dump_json.py  merge_games.py
